src/scss/_overlays.scss
// overlays
.overlay-active {
  .ui-wrap {
    overflow: hidden; // prevent the blurred child from bleeding outside
  }

  .user-interaction {
    filter: blur(3px);
  }

  &.intro-active {
    .overlay.intro {
      opacity: 1;
      z-index: 3;
    }
    .main-controls {
      opacity: 0.25;
      filter: blur(1px);
    }
  }

  &.continue-active {
    .overlay.continue {
      opacity: 1;
      z-index: 3;
    }
    .main-controls {
      opacity: 0.25;
      filter: blur(1px);
    }
  }

  &.play-prompt-active {
    .overlay.play-prompt {
      opacity: 1;
      z-index: 3;
    }
    .main-controls > li:not(.play-stop),
    .aux-controls-wrap {
      opacity: 0.25;
      filter: blur(1px);
    }
  }

  &.share-prompt-active {
    .overlay.share-prompt {
      opacity: 1;
      z-index: 3;
    }
    .main-controls > li:not(.share),
    .aux-controls-wrap {
      opacity: 0.25;
      filter: blur(1px);
    }
  }

  &.tips-active {
    .overlay.tips {
      opacity: 1;
      z-index: 3;
    }
    .main-controls {
      opacity: 0.25;
      filter: blur(1px);
    }
  }

  // share
  &.share-active {
    // FIXME: this is where you toggle the sharing modal per system
    // .share-tips, .share-phone, .share-soon, etc.
    .overlay.share-phone {
      opacity: 1;
      z-index: 3;
    }
    .main-controls > li:not(.share),
    .aux-controls-wrap {
      opacity: 0.25;
      filter: blur(1px);
    }
  }

  &.share-prepare-active {
    .overlay.share-prepare {
      opacity: 1;
      z-index: 3;
    }
    .main-controls,
    .aux-controls-wrap {
      opacity: 0.25;
      filter: blur(1px);
    }
  }

  &.share-confirmation-active {
    .overlay.share-confirmation {
      opacity: 1;
      z-index: 3;
    }
    .main-controls,
    .aux-controls-wrap {
      opacity: 0.25;
      filter: blur(1px);
    }
  }
}

// overlay defaults
.overlay {
  content: "";
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: calc(100vh - 13rem);
  transition: opacity 0.5s;
  opacity: 0;
  z-index: -1;
  color: #000;

  .contents {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 40vw;
    height: 40vh;
    transform: translate(-50%, -50%);
    z-index: 5;
    margin-top: 30px;
    color: #000;
  }

  .header {
    position: relative;
    top: -4rem;
    font-size: 1.7vw;
    font-weight: 800;
    letter-spacing: 0.5rem;
    text-align: center;
    text-transform: uppercase;
    color: #000;

    span {
      display: inline-block;
      margin-right: 3rem;
      color: #000;
    }
  }

  .card-wrap {
    position: relative;
    height: 100%;
  }

  article {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #fff;
    color: #000;
    background-image:
      url('img/symbol-circle.gif'),
      url('img/symbol-square.gif'),
      url('img/symbol-swiggle.gif'),
      url('img/symbol-triangle.gif');
    background-position:
      0% 0%,
      100% 0%,
      100% 100%,
      0% 100%;
    background-repeat: no-repeat;
    border: 0.4rem solid black;
    text-align: center;
    transition: all 0.2s;
  }

  .wrap {
    box-sizing: border-box;
    position: relative;
    margin: 0 auto;
    line-height: 1.25;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }

  .title {
    margin-bottom: 5rem;
    padding: 0 7rem;
    font-size: 1.7vw;
    font-weight: 800;
  }

  .text {
    padding: 0 8rem;
    font-size: 1.1vw;
    font-weight: 600;
    line-height: 1.5;
  }
}

// tips
.overlay.tips {

  // cards
  article {
    opacity: 0;
    transform: translate(0, 0);
    z-index: -1;

    &.current {
      opacity: 1;
      z-index: 3;
    }

    &.next {
      top: -1.5rem;
      left: 1.5rem;
      opacity: 1;
      z-index: 2;
    }

    &.third {
      top: -3rem;
      left: 3rem;
      opacity: 1;
      z-index: 1;
    }

    &.remove {
      animation: cardSort 1.2s forwards;
    }
  }

  .footer {
    position: relative;
    top: 2rem;
    text-align: center;

    span {
      display: inline-block;
      margin: 0 0.3rem;
      font-size: 1.1vw;
      font-weight: 600;
      text-transform: uppercase;
    }
  }
}

// card background graphics - placed here for clarity
article {
  &[data-bg="0"] {
    background-position:
      92% 5%,
      10% 90%,
      1000% 1000%,
      4% 10% !important;
  }
  &[data-bg="1"] {
    background-position:
      10% 7%,
      5% 17%,
      92% 90%,
      1000% 1000% !important;
  }
  &[data-bg="2"] {
    background-position:
      75% 95%,
      1000% 1000%,
      92% 7%,
      5% 20% !important;
  }
  &[data-bg="3"] {
    background-position:
      1000% 1000%,
      12% 95%,
      5% 75%,
      95% 10% !important;
  }
  &[data-bg="4"] {
    background-position:
      5% 12%,
      1000% 1000%,
      98% 45%,
      92% 90% !important;
  }
  &[data-bg="5"] {
    background-position:
      25% 92%,
      70% 5%,
      30% 95%,
      1000% 1000% !important;
  }
}

// card animation keyframes
@keyframes cardSort {
  0% {
    transform: translate(0, 0);
    opacity: 1;
  },
  20% {
    transform: translate(-2rem, 2rem);
  },
  50% {
    transform: translate(2rem, -2rem);
    opacity: 1;
  },
  100% {
    transform: translate(0, 0);
    opacity: 0;
  }
}

// sharing - phone
.overlay.share-phone {

  & * {
    box-sizing: border-box;
  }

  .header {
    top: -2rem;
  }

  article {
    padding: 4vw;
  }

  .wrap {
    height: 100%;
  }

  .output {
    float: left;
    width: 60%;
    padding-right: 5%;
    text-align: left;

    &:before {
      visibility: hidden;
      content: 'Enter a valid phone number: xxx-xxx-xxxx';
      text-transform: uppercase;
      position: absolute;
      top: -2em;
      color: #E20046;
      font-size: .65vw;
      line-height: 1.5;
      margin-left: 0.4rem;
    }

    &.invalid-number {
      #phone {
        border-color: #E20046;
      }

      &:before {
        visibility: visible;
      }
    }
  }

  #phone {
    display: block;
    height: 5vw;
    margin-bottom: 1vw;
    padding: 0 0.8vw;
    border: 0.4rem solid #000;
    font-size: 2vw;
    font-weight: 700;
    letter-spacing: 0.4rem;
    line-height: 4.7vw;
    text-align: center;
    user-select: none;
  }

  .instructions {
    margin-bottom: 1.2vw;
    font-size: 1.1vw;
    font-weight: 600;
    line-height: 1.5;
  }

  .legal {
    font-size: 0.65vw;
    line-height: 1.5;
    text-transform: uppercase;
  }

  .keypad {
    float: right;
    width: 35%;

    button {
      position: relative;
      width: 2.7vw;
      height: 2.7vw;
      margin: 0 0.4vw 0.6vw;
      background: #000;
      border: 0.3rem solid #000;
      border-radius: 50%;
      color: #fff;
      font-size: 1.4vw;
      text-align: center;
      outline: none;
      vertical-align: top;

      &.clear {
        background: transparent;
      }

      &.send {
        background: url('img/send-bg.jpg') center center no-repeat;
        background-size: cover;
      }

      span {
        display: block;
        position: absolute;
        top: 50%;
        left: 50%;
        margin: 0 auto;
        transform: translate(-50%, -50%);
      }

      .text {
        top: 130%;
        color: #000;
        font-size: 0.7vw;
        font-weight: 800;
        text-transform: uppercase;
      }
    }

    .icon-close {

      &::before,
      &::after {
        top: -0.1rem;
        left: 0.9rem;
        width: 0.4rem;
        height: 2.5rem;
      }

      &::after {
        left: 0.8rem;
      }
    }
  }
}

